Done with step 5: final result

--- a/ML_Uppgift1_Katarina_Behrami.ipynb
+++ b/ML_Uppgift1_Katarina_Behrami.ipynb
@@ -3203,28 +3203,131 @@
    "id": "0767b475",
    "metadata": {},
    "source": [
-    "## 5) Slutlig utvärdering på testdata + rekommendation\n",
-    "\n",
-    "- Utvärdera din slutliga modell på testdata och rapportera resultatet.\n",
-    "- Välj minst en relevant metric och motivera valet:\n",
-    "- Regression: t.ex. MAE eller RMSE\n",
-    "- Klassificering: t.ex. F1 eller recall/precision\n",
-    "- Sammanfatta resultat tydligt (tabell rekommenderas).\n",
-    "- Skriv en kort rekommendation: vilken modell skulle du ta vidare och varför?"
+    "## 5) Slutlig utvärdering på testdata + rekommendation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "379a5b92",
+   "metadata": {},
+   "source": [
+    "### Final result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "514eb55d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model': 'Best (CV): Elastic Net',\n",
+       " 'RMSE': 71080.1969802877,\n",
+       " 'MAE': 51781.03402007015,\n",
+       " 'R2': 0.6144414082434888}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#best_model.fit(X_train, y_train)\n",
-    "#y_pred = best_model.predict(X_test)\n",
+    "best_model.fit(X_train, y_train)\n",
+    "y_pred = best_model.predict(X_test)\n",
     "\n",
-    "#final_results = evaluate_regression(y_test, y_pred, model_name = f\"Best (CV): {best_model_name}\")\n",
-    "#final_results"
+    "final_results = evaluate_regression(y_test, y_pred, model_name = f\"Best (CV): {best_model_name}\")\n",
+    "final_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68de287e",
+   "metadata": {},
+   "source": [
+    "RMSE valdes som utvärderingsmått, som jag tidigare nämde, eftersom det straffar större fel mer kraftigt än MAE. I bostadsvärderingen är större avvikelser särskilt problematiska och kan bli kostsamma, vilket gör RMSE lämpligt. \n",
+    "Baserat på cross-validation och testresultaten rekommenderas Elastic Net (blandning med hjälp av mixparameter) modellen. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "55c62003",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>R2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Best (CV): Elastic Net</td>\n",
+       "      <td>71080.19698</td>\n",
+       "      <td>51781.03402</td>\n",
+       "      <td>0.614441</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    model         RMSE          MAE        R2\n",
+       "0  Best (CV): Elastic Net  71080.19698  51781.03402  0.614441"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame([final_results])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "907e2ed3",
+   "metadata": {},
+   "source": [
+    "- **RMSE ≈ 71 000**\n",
+    "Modellen gör i genomsnitt ett fel på cirka 71 000 dollar när den förutser median_house_value\n",
+    "\n",
+    "- **MAE ≈ 51 781** \n",
+    "Det genomsnittliga absoluta felet är cirka 52 000 dollar. Skillnaden mellan RMSE och MAE visar att det finns några större avvikelser i datan samt visa områden är svårare att förutse\n",
+    "\n",
+    "- **R^2 ≈ 0.61** \n",
+    "Modellen förklarar cirka 61% av variationen i bostadsvärdet. Det är inte perfekt men fullt rimligt för ett regressionsproblem.  \n",
+    "\n",
+    "\n",
+    "Modellens genomsnittliga predikationsfel ligger i storleksordningen 50 000 - 70 000 dollar. R^2 värdet på cirka 0.61 visar att modellen förklarar ungefär 61% av variationen i bostadsvärdet. Det kan indikera att modellen fångar en betydande del av sambanden i datan, men det finns fortfarande variation som inte kan förklaras. Det ger modellen en rimlig men inte perfekt prognosförmåga. \n",
+    "\n",
+    "Elastic Net uppvisade lägst RMSE och stabil prestanda jämfört med övriga modeller. Regulariseringen bidrar till att minska risken för en överanpassning och gör modellen robust. "
    ]
   },
   {
